--- a/appDev/app6K/app/style/app_components/content-markup/content-markup.scss
+++ b/appDev/app6K/app/style/app_components/content-markup/content-markup.scss
@@ -95,6 +95,10 @@ table {
     padding-bottom: $margin-def;
 }
 
+.div     { display: block; }
+.span    { display: inline; }
+.spandiv { display: inline-block; vertical-align: middle; }
+
 .box { // for elements with background
 
     /* has paddings */
@@ -105,6 +109,15 @@ table {
     background-size:     cover;
     background-repeat:   no-repeat;
     background-position: center center;
+}
+.pill {
+    display: inline-block;
+    vertical-align: middle;
+    &, a { text-decoration: none; }
+    padding-left: 0.4em;
+    padding-right: 0.4em;
+    white-space: nowrap;
+    * { white-space: normal; }
 }
 
 .bg { background-color: $color_main_shadow; }
@@ -138,20 +151,36 @@ table {
 
 label {
     display: block;
+    padding: 0 0.75em;
 }
 input {
     display: block;
     width:   100%;
-    padding: 0.25em 1em;
+    padding: 0.25em 0.75em;
+
+    /* default font */
+    font-family: inherit;
+    font-size:   inherit;
+    line-height: inherit;
 }
 textarea {
     display: block;
     width:   100%;
-    padding: 1em;
+    padding: 0.75em;
     resize:  vertical;
+
+    /* default font */
+    font-family: inherit;
+    font-size:   inherit;
+    line-height: inherit;
 }
 button {
-    padding: 0.25em 1em;
+    padding: 0.25em 0.75em;
+
+    /* default font */
+    font-family: inherit;
+    font-size:   inherit;
+    line-height: inherit;
 }
 
 
@@ -160,8 +189,24 @@ button {
 
 [hidden], .hidden { display: none!important; }
 
-[bg]      { @extend .bg; }
-[chapter] { @extend .grid; @extend .chapter; }
+[bg]        { @extend .bg; }
+[div]       { @extend .div; }
+[span]      { @extend .span; }
+[spandiv]   { @extend .spandiv; }
+
+[big-title] { @extend .big-title; }
+[min-title] { @extend .min-title; }
+[title]     { @extend .title; }
+[subtitle]  { @extend .subtitle; }
+
+[chapter] {
+    @extend .chapter;
+    @extend .grid;
+}
+[layer]     { @extend .layer; }
+[block]     { @extend .block; }
+[aside]     { @extend .aside; }
+[image]     { @extend .illustration; }
 
 
 /* eof styles for content */
