--- a/appDev/app6K/app/style/app_components/data-table/data-table.scss
+++ b/appDev/app6K/app/style/app_components/data-table/data-table.scss
@@ -1,5 +1,5 @@
 /* ==============================================================
-    data table - liquid table for large data set
+    data table - Responsive Data Tables
     2018.12.8
 ============================================================== */
 
@@ -7,8 +7,6 @@
 //* ------------------------------------ dependencies
 
 
-$screenForTablet: $screenForTablet; //  "max-width: 900px";
-$screenNotTablet: $screenNotTablet; //  "min-width: 901px";
 $screenForMobile: $screenForMobile; //  "max-width: 600px";
 $screenNotMobile: $screenNotMobile; //  "min-width: 601px";
 
@@ -53,7 +51,7 @@ $screenNotSmallDataTable: $screenNotMobile;
     }
 
 
-    /* table addon --Compact Mobile View */
+    /* table addon - has compact mobile view */
 
     @media all and ($screenForSmallDataTable) {
         &:not(.is-perfect) {
@@ -132,14 +130,14 @@ $screenNotSmallDataTable: $screenNotMobile;
     }
 
 
-    /* table addon -- type of content */
+    /* table addon -- has type of content */
 
     &[data-table-type*="1num"] tr > *:nth-child(1),
     &[data-table-type*="2num"] tr > *:nth-child(2),
     &[data-table-type*="3num"] tr > *:nth-child(3),
     &[data-table-type*="4num"] tr > *:nth-child(4),
     &[data-table-type*="5num"] tr > *:nth-child(5),
-    & .aNumber {
+    .is-number {
         text-align: right;
     }
 
@@ -148,7 +146,7 @@ $screenNotSmallDataTable: $screenNotMobile;
     &[data-table-type*="3num"] tr > *:not(th):nth-child(3),
     &[data-table-type*="4num"] tr > *:not(th):nth-child(4),
     &[data-table-type*="5num"] tr > *:not(th):nth-child(5),
-    & .aNumber:not(th) {
+    .is-number:not(th) {
         font-family: monospace;
     }
 
@@ -158,7 +156,7 @@ $screenNotSmallDataTable: $screenNotMobile;
     &[data-table-type*="3str"] tr > *:not(th):nth-child(3),
     &[data-table-type*="4str"] tr > *:not(th):nth-child(4),
     &[data-table-type*="5str"] tr > *:not(th):nth-child(5),
-    & .aString:not(th) {
+    .is-string:not(th) {
         white-space:   nowrap;
         text-overflow: ellipsis;
         overflow:      hidden;
