--- a/appDev/app6K/app/style/app.scss
+++ b/appDev/app6K/app/style/app.scss
@@ -12,15 +12,14 @@
 
 // default components
 
-/* 000 */@import "app_components/layout-body-wrap/layout-body-wrap.scss";
-
-/* 010 */@import "app_components/grid-for-article/grid-for-article.scss";
+/* 010 */@import "app_components/layout-body-wrap/layout-body-wrap.scss";
+/* 011 */@import "app_components/grid-for-article/grid-for-article.scss";
+/* 012 */@import "app_components/group/group.scss";
 
 /* 020 */@import "app_components/content-markup/content-markup.scss";
 /* 021 */@import "app_components/content-markup/content-typography.scss";
 /* 022 */@import "app_components/content-markup/design-template.scss";
 
-@import "app_components/group/group.scss";
 
 @import "app_components/data-table/data-table.scss";
 
@@ -55,3 +54,4 @@
 
 
 @import "app-custom.scss";
+@import "design/design-gl.scss";
