--- a/appDev/app6K/app/style/app_core/00-construct.scss
+++ b/appDev/app6K/app/style/app_core/00-construct.scss
@@ -36,6 +36,12 @@
     line-height: inherit;
     font-weight: inherit;
 }
+@mixin text-is-visually-hidden {
+    /* has visually hidden text content */
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+}
 
 
 //* ------------------------------------ dev markup
