--- a/appDev/app6K/try-supergrid.scss
+++ b/appDev/app6K/try-supergrid.scss
@@ -1,270 +1,5 @@
-$colorShy: rgba(0,0,0,0.05);
-$Wdim: 1.0rem;
-$Hdim: 0.9rem;
-
 // --------------------------------------------------------------
-
-html {
-    font-family: Vollkorn;
-    cursor:default;
-}
-html, body { margin: 0; padding: 0; }
-
-p,ul,h1,h2 {
-    &:hover { background-color: $colorShy; }
-}
-
-.img {
-    padding-top: 40%;
-    background-color: goldenrod;
-}
-
-
-
-// --------------------------------------------------------------
-
-$grid-formula--size-overmain:    0;
-$grid-formula--size-screenspace: minmax(0, 1fr);
-$grid-formula--size-menu:  16vw;
-$grid-formula--size-side: 16vw;
-
-$grid-formula--part-midpoint:
-    1fr unquote(" [b] ")
-    1fr unquote(" [c] ")
-    1fr unquote(" [d midpoint] ")
-    1fr unquote(" [e] ")
-    1fr unquote(" [f] ")
-    1fr ;
-$grid-formula--part-main:
-    0
-    unquote(" [main-start a] ")
-        $grid-formula--part-midpoint
-    unquote(" [main-end g] ")
-    0
-    ;
-$grid-formula--part-menu:
-    0
-    unquote(" [menu-start] ")
-        $grid-formula--size-menu
-    unquote(" [menu-end] ")
-    0
-    ;
-$grid-formula--part-side:
-    0
-    unquote(" [side-start] ")
-        $grid-formula--size-side
-    unquote(" [side-end] ")
-    0
-    ;
-
-// --------------------------------------------------------------
-$grid-template-columns--full:
-    unquote(" [full-start] ")
-        $grid-formula--size-screenspace
-    unquote(" [overmenu-start] ")
-        $grid-formula--part-menu
-    unquote(" [overmenu-end overmain-start] ")
-        $grid-formula--part-main
-    unquote(" [overmain-end overside-start] ")
-        $grid-formula--part-side
-    unquote(" [overside-end] ")
-        $grid-formula--size-screenspace
-    unquote(" [full-end] ")
-    ;
-// --------------------------------------------------------------
-$grid-template-columns--overmain:
-    unquote(" [full-start overmain-start overmenu-start overside-start] ")
-            $grid-formula--size-overmain
-        unquote(" [main-start menu-start side-start a] ")
-            $grid-formula--part-midpoint
-        unquote(" [main-end menu-end side-end g] ")
-            $grid-formula--size-overmain
-    unquote(" [full-end overmain-end overmenu-end overside-end] ")
-    ;
-// --------------------------------------------------------------
-$grid-template-columns--overmain-cut-one:
-    unquote(" [full-start overmain-start overmenu-start overside-start] ")
-            $grid-formula--size-overmain
-        unquote(" [main-start menu-start side-start a] ")
-            $grid-formula--part-midpoint
-    unquote(" [ ")
-        main-end
-        menu-end
-        side-end
-        overmain-end
-        overmenu-end
-        overside-end
-        full-end
-        g
-    unquote(" ] ")
-    ;
-$grid-template-columns--overmain-cut-two:
-    unquote(" [ ")
-        full-start
-        overmenu-start
-        overmain-start
-        overside-start
-        menu-start
-        main-start
-        side-start
-        a
-    unquote(" ] ")
-            $grid-formula--part-midpoint
-        unquote(" [main-end menu-end side-end g] ")
-            $grid-formula--size-overmain
-    unquote(" [overmain-end overmenu-end overside-end full-end] ")
-    ;
-// --------------------------------------------------------------
-$grid-template-columns--merge:
-    unquote(" [full-start overmenu-start] ")
-        $grid-formula--part-menu
-    unquote(" [overmenu-end overmain-start] ")
-        $grid-formula--part-main
-    unquote(" [overmain-end overside-start] ")
-        $grid-formula--part-side
-    unquote(" [overside-end full-end] ")
-    ;
-// --------------------------------------------------------------
-$grid-template-columns--merge-menu:
-    unquote(" [full-start overmenu-start] ")
-        $grid-formula--part-menu
-    unquote(" [overmenu-end overmain-start overside-start] ")
-        0
-        unquote(" [main-start side-start a] ")
-            $grid-formula--part-midpoint
-        unquote(" [main-end side-end g] ")
-        0
-    unquote(" [overmain-end overside-end full-end] ")
-    ;
-// --------------------------------------------------------------
-$grid-template-columns--merge-side:
-    unquote(" [full-start overmenu-start overmain-start] ")
-        0
-        unquote(" [main-start menu-start a] ")
-            $grid-formula--part-midpoint
-        unquote(" [main-end menu-end g] ")
-        0
-    unquote(" [overmain-end overmenu-end overside-start] ")
-        $grid-formula--part-side
-    unquote(" [overside-end full-end] ")
-    ;
-
-
-
-// --------------------------------------------------------------
-$grid-template-columns--short:
-    unquote(" [ ")
-        full-start
-        menu-start
-        overmain-start
-        main-start
-        side-start
-        a b
-    unquote(" ] ")
-            1fr
-                unquote(" [c d e midpoint] ")
-            1fr
-    unquote(" [ ")
-        full-end
-        menu-end
-        overmain-end
-        main-end
-        side-end
-        f g
-    unquote(" ] ");
-
-// --------------------------------------------------------------
-$grid-template-columns--main:
-    unquote(" [ ")
-        full-start
-        menu-start
-        overmain-start
-        main-start
-        side-start
-        a
-    unquote(" ] ")
-        $grid-formula--part-midpoint
-    unquote(" [ ")
-        full-end
-        menu-end
-        overmain-end
-        main-end
-        side-end
-        g
-    unquote(" ] ");
-
-
-
-
-$grid-template-columns--merge-menu-screen:
-    unquote(" [full-start] ")
-            $grid-formula--size-screenspace
-        unquote(" [menu-start] ")
-            $grid-formula--size-menu
-        unquote(" [menu-end overmain-start] ")
-                $grid-formula--size-overmain
-            unquote(" [main-start side-start a] ")
-                $grid-formula--part-midpoint
-            unquote(" [main-end side-end g] ")
-                $grid-formula--size-overmain
-        unquote(" [overmain-end full-end] ")
-    ;
-$grid-template-columns--merge-side-screen:
-        unquote(" [full-start overmain-start] ")
-                $grid-formula--size-overmain
-            unquote(" [main-start menu-start a] ")
-                $grid-formula--part-midpoint
-            unquote(" [main-end menu-end g] ")
-                $grid-formula--size-overmain
-        unquote(" [overmain-end side-start] ")
-            $grid-formula--size-side
-        unquote(" [side-end] ")
-            $grid-formula--size-screenspace
-    unquote(" [full-end] ")
-    ;
-
-$grid-template-columns--overmain-half-one:
-    unquote(" [overmain-start full-start] ")
-            $grid-formula--size-overmain
-        unquote(" [main-start menu-start side-start a] ")
-            $grid-formula--part-midpoint
-        unquote(" [main-end menu-end side-end overmain-end full-end g] ")
-    ;
-
-$grid-template-columns--overmain-half-two:
-        unquote(" [overmain-start full-start main-start menu-start side-start a] ")
-            $grid-formula--part-midpoint
-        unquote(" [main-end menu-end side-end g] ")
-            $grid-formula--size-overmain
-    unquote(" [overmain-end full-end] ")
-    ;
-
-
-%grid-setup {
-    // setup
-    display:        grid;
-    align-items:    start;
-    grid-auto-flow: row;
-    grid-auto-rows: min-content;
-    grid-gap:       1*$Hdim 1*$Wdim;
-    // default template
-    grid-template-columns: $grid-template-columns--overmain;
-}
-%grid-template--short {
-    grid-template-columns: $grid-template-columns--short;
-}
-%grid-template--main {
-    grid-template-columns: $grid-template-columns--main;
-}
-%grid-template--full {
-    grid-template-columns: $grid-template-columns--full;
-}
-%grid-template--overmain {
-    grid-template-columns: $grid-template-columns--overmain;
-}
-
-
-// --------------------------------------------------------------
+// griz classes
 
 .grid {
     @extend %grid-setup;
@@ -277,15 +12,18 @@ $grid-template-columns--overmain-half-two:
     }
 }
 
-// Major collumns
+// Major columns
 
 .grid--layer {
     @extend %grid-setup;
-    //@extend %grid-template--full;
     grid-column: full;
 }
+.grid--overmain {
+    @extend %grid-setup;
+    grid-column: overmain;
+}
 
-// Minor collumns
+// Minor columns
 
 .grid--side {
     @extend %grid-setup;
@@ -304,44 +42,71 @@ $grid-template-columns--overmain-half-two:
     grid-column: full-start / overmenu-end;
 }
 
-// Merge collumns
+// Merge columns
 
 .grid--merge {
     @extend %grid-setup;
-    //grid-template-columns: $grid-template-columns--merge;
     grid-column: overmenu-start / overside-end;
 }
 .grid--merge-menu {
     @extend %grid-setup;
-    //grid-template-columns: $grid-template-columns--merge-menu;
     grid-column: overmenu-start / overmain-end;
 }
 .grid--merge-side {
     @extend %grid-setup;
-    //grid-template-columns: $grid-template-columns--overmain;
     grid-column: overmain-start / overside-end;
 }
 .grid--merge-menu-screen {
     @extend %grid-setup;
-    //grid-template-columns: $grid-template-columns--merge-menu-screen;
     grid-column: full-start / overmain-end;
 }
 .grid--merge-side-screen {
     @extend %grid-setup;
-    //grid-template-columns: $grid-template-columns--merge-side-screen;
     grid-column: overmain-start / full-end;
+}
+
+// Keep grid
+
+.grid--keep {
+    @extend %grid-setup;
+
+    // in single mode keep main column (for vertical gap)
+
+    grid-template-columns: $grid-template-columns--main;
+
+    // with grid components - keep grid layout for childrens (for background properties)
+
+    @media all and ($screenNotCompactGrid) {
+        &.grid--layer { grid-template-columns: $grid-template-columns--full; }
+        &.grid--merge { grid-template-columns: $grid-template-columns--merge; }
+        &.grid--merge-menu { grid-template-columns: $grid-template-columns--merge-menu; }
+        &.grid--merge-side { grid-template-columns: $grid-template-columns--merge-side; }
+        &.grid--merge-menu-screen { grid-template-columns: $grid-template-columns--merge-menu-screen; }
+        &.grid--merge-side-screen { grid-template-columns: $grid-template-columns--merge-side-screen; }
+    }
+    @media all and ($screenForCompactGrid) {
+        &.grid--layer,
+        &.grid--merge,
+        &.grid--merge-menu,
+        &.grid--merge-menu-screen,
+        &.grid--merge-side,
+        &.grid--merge-side-screen
+        {
+            grid-template-columns: $grid-template-columns--overmain;
+        }
+    }
 }
 
 // Halves
 
 .grid--half-one {
     @extend %grid-setup;
-    @extend %grid-template--short;
+    grid-template-columns: $grid-template-columns--short;
     grid-column: main-start / midpoint;
 }
 .grid--half-two {
     @extend %grid-setup;
-    @extend %grid-template--short;
+    grid-template-columns: $grid-template-columns--short;
     grid-column: midpoint / main-end;
 }
 .grid--half-screen-one {
@@ -352,30 +117,30 @@ $grid-template-columns--overmain-half-two:
 .grid--half-screen-two {
     @extend %grid-setup;
     grid-template-columns: $grid-template-columns--overmain-cut-two;
-    grid-column: midpoint / full-end;
+    grid-column: d / full-end;
+}
+
+// Alignment
+
+.is-v-centered {
+    align-self: center;
+}
+.has-v-centered {
+    &>* { align-self: center; }
+}
+.has-v-slices {
+    grid-row-gap: 0;
 }
 
 
 
-.grid--keep {
-    @extend %grid-setup;
-    @extend %grid-template--main;
-}
-.grid--overmain {
-    @extend %grid-setup;
-    @extend %grid-template--overmain;
-    grid-column: overmain;
-}
-
-
-
-
-// --------------------------------------------------------------
+// --------------------------------------------- PENDING
 
 .grid--chapter {
     @extend .grid;
-    padding-top:    1*$Hdim;
-    padding-bottom: 1*$Hdim;
+    $grid-settings--column-gap: $grid-settings--column-gap; // 1rem
+    padding-top:    1*$grid-settings--column-gap;
+    padding-bottom: 1*$grid-settings--column-gap;
 }
 .grid--as-main {
     grid-template-columns: $grid-template-columns--main;
@@ -392,13 +157,6 @@ $grid-template-columns--overmain-half-two:
 [overmain]          { @extend .grid--overmain; }
 
 
-/*
-.grid--merge, .grid--merge-menu, .grid--merge-side, .grid--layer,
-.grid--menu-screen, .grid--side-screen {
-    background-color: $colorShy;
-    * { background-color: $colorShy; }
-}
-*/
 .grid:hover *:not(.box):not(.img) { background-color: $colorShy; }
 
 
@@ -414,10 +172,17 @@ $grid-template-columns--overmain-half-two:
 
 
 .box {
-    padding-top:    1*$Hdim;
-    padding-bottom: 1*$Hdim;
+    $grid-settings--column-gap: $grid-settings--column-gap; // 1rem
+    padding-top:    1*$grid-settings--column-gap;
+    padding-bottom: 1*$grid-settings--column-gap;
     background-color: firebrick;
     color: white;
+    &.badbox {
+        background-color: indigo;
+    }
+    &.altbox {
+        background-color: darkslategrey;
+    }
 }
 [box] { @extend .box; }
 
